# AI2Analytics

./: .gitignore  README.md  pyproject.toml
blog/: 01_scaling_pharma_analytics.md  02_detail_optimization.md  03_cross_region_segmentation.md  04_knowledge_accumulation.md
demos/: README.md  synthetic_bric.py  synthetic_eu_account.py  synthetic_us_hcp.py
demos/notebooks/: demo_cross_region.py  demo_knowledge.py  demo_market_mix.py  demo_segmentation_eu.py  demo_segmentation_us.py
sanity_checks/: compare_old_plan.py  missing_npis.py  planning_date_npi_drop.py  portfolio_summary.py  stage_d_full_trace.py  stage_d_npi_trace.py
src/ai2analytics/: __init__.py  llm.py  session.py  utils.py
src/ai2analytics/codegen/: adapter.py
src/ai2analytics/conversation/: manager.py
src/ai2analytics/discovery/: profiler.py  surveyor.py
src/ai2analytics/knowledge/: __init__.py  context_store.py  decision_store.py  retrieval.py
src/ai2analytics/templates/: base.py  registry.py
src/ai2analytics/templates/detail_optimization/: __init__.py  config.py  features.py  loader.py  models.py  optimizer.py  output.py  pipeline.py  scoring.py
src/ai2analytics/templates/market_mix/: __init__.py  config.py  features.py  loader.py  model.py  output.py  pipeline.py
src/ai2analytics/templates/segmentation/: __init__.py  config.py  features.py  loader.py  model.py  output.py  pipeline.py
